tests/scan/fixtures/validation/negative/clean_go_clean-cache-client/clean-cache-client.go
// Package clean-cache-client is a clean Go module.
package clean-cache-client

func Hello() string { return "hello" }
